--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,7 @@
         "statusBar.background": "#b52e31",
         "statusBarItem.hoverBackground": "#d04649",
         "statusBar.foreground": "#e7e7e7"
-    }
+    },
+    "files.autoSave": "afterDelay",
+    "files.autoSaveDelay": 500
 }
