--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,5 @@
         "statusBarItem.hoverBackground": "#d04649",
         "statusBar.foreground": "#e7e7e7"
     },
-    "files.autoSave": "afterDelay",
-    "files.autoSaveDelay": 500
+    "peacock.color": "#b52e31"
 }
