--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,6 @@
         "statusBarItem.hoverBackground": "#d04649",
         "statusBar.foreground": "#e7e7e7"
     },
-    "peacock.color": "#b52e31"
+    "peacock.color": "#b52e31",
+    "git.ignoreLimitWarning": true
 }
