made scroll bar on all members table and Updates Registered by on User Table

--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,5 @@ felix.txt
 user/includes/phpspreadsheet/vendor
 user/includes/vendor
 user/includes/mailer.php
-user/includes/phpspreadsheet/
+user\includes\phpspreadsheet\database.php
 
